--- a/introduction.mdx
+++ b/introduction.mdx
@@ -28,7 +28,7 @@ The typical workflow in Galtea follows these steps:
 <Steps>
   <Step title="Create Product">Create a [Product](/concepts/product) to represent your AI functionality</Step>
   <Step title="Create Version">Define a new [Version](/concepts/product/version) of your [Product](/concepts/product) with specific parameters</Step>
-  <Step title="Create Test">Define a new [Test](/concepts/product/test) with challenges to evaluate your [Product](/concepts/product)</Step>
+  <Step title="Create Test">Define a new [Test](/concepts/product/test) with [Test Cases](/concepts/product/test/case) to evaluate your [Product](/concepts/product)</Step>
   <Step title="Run Evaluations">Test the [Version](/concepts/product/version) against one [Test](/concepts/product/test) using [Evaluations](/concepts/product/evaluation) and custom [Metric Types](/concepts/metric-type)</Step>
   <Step title="Analyze Results">Review and compare the performance of different [Versions](/concepts/product/version) using the built-in analytics</Step>
   <Step title="Iterate">Create new [Version](/concepts/product/version) with improvements and repeat the evaluation process</Step>
