--- a/concepts/product/test/case.mdx
+++ b/concepts/product/test/case.mdx
@@ -33,15 +33,15 @@ When creating a test case in Galtea, you'll need to provide the following inform
 </ResponseField>
 
 <ResponseField name="input" type="string" required>
-  The input for the test case. This is the question or prompt you want to send to your model for a later evaluation.
+  The input data used for inference on the LLM product's version. **Example**: "How much does the iPhone 16 cost?"
 </ResponseField>
 
 <ResponseField name="expected_output" type="string">
-  The expected output for the input given. This is the correct answer or response you want to evaluate against.
+  The expected output for the evaluation task, extracted from the test file. **Example**: "The iPhone 16 costs $999."
 </ResponseField>
 
 <ResponseField name="context" type="string">
-  The context for the test case. This is the additional information that can help the model generate the expected output, also sent to your product's model alongside the input.
+  Additional context provided to the product's version upon inference alongside the input. **Example**: "[product catalog]"
 </ResponseField>
 
 <ResponseField name="tag" type="string">
