Quality and rest teaming tests

--- a/concepts/product/test.mdx
+++ b/concepts/product/test.mdx
@@ -17,7 +17,7 @@ When creating a test in the Galtea dashboard, you'll be asked to specify the tes
 
 <CardGroup cols={2}>
   <Card title="Generated" icon="wand-magic-sparkles">
-    Galtea will take the ground truth file and generate a set of challenges that will define the test.
+    Galtea will take the ground truth file and generate a set of test cases that will define the test.
   </Card>
   <Card title="Uploaded" icon="file-arrow-up">
     The test is uploaded by you as a complete set of test cases.
@@ -25,6 +25,10 @@ When creating a test in the Galtea dashboard, you'll be asked to specify the tes
 </CardGroup>
 
 Your selection will determine whether you need to provide a Ground Truth File or a Test File.
+
+<Info>
+  More information on how to create tests can be found in the [Quality Tests](/concepts/product/test/quality-tests) and [Red Teaming Tests](/concepts/product/test/red-teaming-tests) sections.
+</Info>
 
 ## Test Types
 
